day5-6 second commit

--- a/day5-6/makefile
+++ b/day5-6/makefile
@@ -1,5 +1,9 @@
-a: client.o model_base.o controller_base.o view_base.o model_derived.o controller_derived.o view_first.o view_last.o view_count.o view_sum.o
-	g++ client.o model_base.o controller_base.o view_base.o model_derived.o controller_derived.o view_first.o view_last.o view_count.o view_sum.o
+a: client.o model_base.o controller_base.o view_base.o model_derived.o controller_derived.o view_first.o view_last.o view_count.o view_sum.o view_greatest_key.o view_greatest_diff.o
+	g++ client.o model_base.o controller_base.o view_base.o model_derived.o controller_derived.o view_first.o view_last.o view_count.o view_sum.o view_greatest_key.o view_greatest_diff.o
+view_greatest_diff.o: view_greatest_diff.cpp view_greatest_diff.h view_base.h model_base.h controller_base.h
+	g++ -c view_greatest_diff.cpp
+view_greatest_key.o: view_greatest_key.cpp view_greatest_key.h view_base.h model_base.h controller_base.h
+	g++ -c view_greatest_key.cpp
 view_sum.o: view_sum.cpp view_sum.h view_base.h model_base.h controller_base.h
 	g++ -c view_sum.cpp
 view_count.o: view_count.cpp view_count.h view_base.h model_base.h controller_base.h
@@ -18,5 +22,5 @@ controller_base.o: controller_base.cpp controller_base.h
 	g++ -c controller_base.cpp
 model_base.o: model_base.cpp model_base.h
 	g++ -c model_base.cpp
-client.o: client.cpp model_derived.h controller_derived.h view_first.h view_last.h view_count.h view_sum.h
+client.o: client.cpp model_derived.h controller_derived.h view_first.h view_last.h view_count.h view_sum.h view_greatest_key.h view_greatest_diff.h
 	g++ -c client.cpp
